--- a/client/src/components/OrderSelector.css
+++ b/client/src/components/OrderSelector.css
@@ -1,35 +1,35 @@
-.cell-container {
+.order-selector {
+  padding: 0.375rem 0.75rem;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  overflow-y: scroll;
 }
 
-.cell {
+.order {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 26px;
-  height: 26px;
-  margin: 2px;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  background-color: #f8f9fa;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0.1rem;
+  border-radius: 50%;
   cursor: pointer;
-  font-size: 0.75em;
+  font-size: 0.9rem;
 }
 
-.cell:hover {
+.order:hover {
   background-color: #e2e6ea;
 }
 
-.cell.active {
-  background-color: #23272b;
-  border-color: #1d2124;
+.order.occupied {
+  background-color: #6c757d;
   color: white;
-  cursor: auto;
 }
 
-.cell.selected {
+.order.selected {
   background-color: #0d6efd;
   border-color: #0d6efd;
+  color: white;
 }
